tests/2018-11-01/Microsoft.Network.NetworkSecurityGroup.tests.json
{
  "tests":[
    {
      "name":"networkSecurityGroup tests",
      "definition":"https://schema.management.azure.com/schemas/2018-11-01/Microsoft.Network.json#/resourceDefinitions/networkSecurityGroups",
      "json":{
        "apiVersion":"2018-11-01",
        "type":"Microsoft.Network/networkSecurityGroups",
        "name":"[variables('networkSecurityGroupName')]",
        "location":"[resourceGroup().location]",
        "properties":{
          "securityRules":[
            {
              "name":"first_rule",
              "properties":{
                "description":"This is the first rule",
                "protocol":"Tcp",
                "sourcePortRange":"23-45",
                "destinationPortRange":"46-56",
                "sourceAddressPrefix":"*",
                "destinationAddressPrefix":"*",
                "access":"Allow",
                "priority":123,
                "direction":"Inbound"
              }
            }
          ]
        }
      }
    },
    {
      "name":"networkSecurityGroup tests - minimal",
      "definition":"https://schema.management.azure.com/schemas/2018-11-01/Microsoft.Network.json#/resourceDefinitions/networkSecurityGroups",
      "json":{
        "apiVersion":"2018-11-01",
        "type":"Microsoft.Network/networkSecurityGroups",
        "name":"[variables('networkSecurityGroupName')]",
        "location":"[resourceGroup().location]",
        "properties":{
          "securityRules":[
            {
              "name":"first_rule",
              "properties":{
                "protocol":"Tcp",
                "sourcePortRange":"23-45",
                "destinationPortRange":"46-56",
                "sourceAddressPrefix":"*",
                "destinationAddressPrefix":"*",
                "access":"Allow",
                "priority":123,
                "direction":"Inbound"
              }
            }
          ]
        }
      }
    },
    {
      "name":"networkSecurityGroup tests - no required properties",
      "definition":"https://schema.management.azure.com/schemas/2018-11-01/Microsoft.Network.json#/resourceDefinitions/networkSecurityGroups",
      "expectedErrors":[
        {
          "message":"Data does not match any schemas from \"oneOf\"",
          "dataPath":"/properties"
        }
      ],
      "json":{
        "apiVersion":"2018-11-01",
        "type":"Microsoft.Network/networkSecurityGroups",
        "name":"[variables('networkSecurityGroupName')]",
        "location":"[resourceGroup().location]",
        "properties":{
          "securityRules":[
            {
              "name":"first_rule",
              "properties":{

              }
            }
          ]
        }
      }
    },
    {
      "name":"networkSecurityGroup tests - no rules",
      "definition":"https://schema.management.azure.com/schemas/2018-11-01/Microsoft.Network.json#/resourceDefinitions/networkSecurityGroups",
      "json":{
        "apiVersion":"2018-11-01",
        "type":"Microsoft.Network/networkSecurityGroups",
        "name":"[variables('networkSecurityGroupName')]",
        "location":"[resourceGroup().location]",
        "properties":{

        }
      }
    },
    {
      "name":"networkSecurityGroup tests - no name, location",
      "definition":"https://schema.management.azure.com/schemas/2018-11-01/Microsoft.Network.json#/resourceDefinitions/networkSecurityGroups",
      "expectedErrors":[
        {
          "message":"Missing required property: name",
          "dataPath":"/"
        },
        {
            "message": "Missing required property: location",
            "dataPath": "/"
        }
      ],
      "json":{
        "apiVersion":"2018-11-01",
        "type":"Microsoft.Network/networkSecurityGroups",
        "properties":{
          "securityRules":[
            {
              "name":"first_rule",
              "properties":{
                "description":"This is the first rule",
                "protocol":"Tcp",
                "sourcePortRange":"23-45",
                "destinationPortRange":"46-56",
                "sourceAddressPrefix":"*",
                "destinationAddressPrefix":"*",
                "access":"Allow",
                "priority":123,
                "direction":"Inbound"
              }
            }
          ]
        }
      }
    },
    {
      "name":"networkSecurityGroup tests - invalid types",
      "definition":"https://schema.management.azure.com/schemas/2018-11-01/Microsoft.Network.json#/resourceDefinitions/networkSecurityGroups",
      "expectedErrors":[
        {
          "message":"Data does not match any schemas from \"oneOf\"",
          "dataPath":"/properties"
        }
      ],
      "json":{
        "apiVersion":"2018-11-01",
        "type":"Microsoft.Network/networkSecurityGroups",
        "name":"[variables('networkSecurityGroupName')]",
        "location":"[resourceGroup().location]",
        "properties":{
          "securityRules":[
            {
              "name":"first_rule",
              "properties":{
                "description":123,
                "protocol":4,
                "sourcePortRange":23,
                "destinationPortRange":46,
                "sourceAddressPrefix":true,
                "destinationAddressPrefix":false,
                "access":321,
                "priority":"123",
                "direction":19
              }
            }
          ]
        }
      }
    }
  ]
}
